--- a/index.css
+++ b/index.css
@@ -1,49 +1,55 @@
-body{
-    padding: 0;
-    margin: 0;
-}
-main{
-    padding: 0;
-    margin: 0;
 
+body{
+    background-color:  hsl(0, 0%, 95%)
+    ;
 }
-.parent{
-    width: 60%;
-    margin: 15% auto;
+.container{
     display: flex;
-    align-items: center;
-    justify-content: space-around;
+    flex-direction: row;
+    width:70%;
+    margin:50px auto;
     border-radius: 15px;
+    height: auto;
     overflow: hidden;
 
 }
 .child{
-   padding: 40px;
-   height: 50vh;
+    padding: 20px;
 }
-#first{
-background-color:  hsl(31, 77%, 52%);
+#one{
+    background-color: hsl(31, 77%, 52%);
 }
-#second{
-    background-color: hsl(184, 100%, 22%) ;
-}
-#third{
-    background-color: hsl(179, 100%, 13%) ;
+#two{
+    background-color: hsl(184, 100%, 22%);
 }
 h1{
-    color: hsl(0, 0%, 95%);
-    font-weight: 800;
-    font-size: 35px;
+    color:  hsl(0, 0%, 95%)
+    ;
 }
 p{
-    color:  hsla(0, 0%, 100%, 0.75);
-    margin-bottom: 50%;
+    color: hsla(0, 0%, 100%, 0.75);
+}
+#three{
+    background-color: hsl(179, 100%, 13%);
+}
+.color-1{
+    color: hsl(31, 77%, 52%);
+}
+.color-2{
+    color: hsl(184, 100%, 22%);
+}
+.color-3{
+    color: hsl(179, 100%, 13%);
+}
+a{
+    text-decoration: none;
 }
 button{
-    padding: 12px;
-    width: 60%;
-    border-radius: 20px;
-    color: white;
-    border: 1.5px solid white;
+    padding: 5px;
+    border: none;
+    border-radius: 10px;
+    margin-top: 50px;
+    margin-bottom: 20px;
     
 }
+
